--- a/exercise1-with-solutions.ipynb
+++ b/exercise1-with-solutions.ipynb
@@ -724,7 +724,9 @@
    "id": "0b1c4bbd-fb19-43c0-badc-a461e53a2a40",
    "metadata": {},
    "source": [
-    "## Exercise 1.4: Find the required current for a specific torque"
+    "## Exercise 1.4: Find the required current for a specific torque\n",
+    "\n",
+    "**Exercise**: Find the current such that the torque applied to the rotor is `0.1mN*m` by repeatedly changing the value of `args['I']` in the cell below and running the cell."
    ]
   },
   {
@@ -744,7 +746,6 @@
     }
    ],
    "source": [
-    "# Solution:\n",
     "args['I'] = 10\n",
     "args = system.solve(constrain=constraints, arguments=args)\n",
     "print_scalar('torque', 'mN*m')"
