--- a/exercise1-with-solutions.ipynb
+++ b/exercise1-with-solutions.ipynb
@@ -13,8 +13,6 @@
     "\n",
     "TODO: Add subdomain labels, $x_0$, $x_1$, Dirichlet boundary labels.\n",
     "\n",
-    "TODO: replace dV with dS and dS with dL\n",
-    "\n",
     "TODO: let matplotlib generate svgs (with rasterized images)\n",
     "\n",
     "TODO: split-off constraints\n",
@@ -163,7 +161,7 @@
       "[ 60%] Meshing curve 5 (Ellipse)\n",
       "[ 80%] Meshing curve 6 (Ellipse)\n",
       "[ 90%] Meshing curve 7 (Ellipse)\n",
-      "Done meshing 1D (Wall 0.0189149s, CPU 0.00957s)\n",
+      "Done meshing 1D (Wall 0.00827385s, CPU 0.008171s)\n",
       "Meshing 2D...\n",
       "[  0%] Meshing surface 2 (Plane, Frontal-Delaunay)\n",
       "[ 20%] Meshing surface 3 (Plane, Frontal-Delaunay)\n",
@@ -172,7 +170,7 @@
       "[ 60%] Meshing surface 9 (Plane, Frontal-Delaunay)\n",
       "[ 80%] Meshing surface 10 (Plane, Frontal-Delaunay)\n",
       "[ 90%] Meshing surface 11 (Plane, Frontal-Delaunay)\n",
-      "Done meshing 2D (Wall 0.0415363s, CPU 0.019391s)\n",
+      "Done meshing 2D (Wall 0.0210369s, CPU 0.020977s)\n",
       "Meshing order 2 (curvilinear on)...\n",
       "[  0%] Meshing curve 1 order 2\n",
       "[ 10%] Meshing curve 2 order 2\n",
@@ -189,7 +187,7 @@
       "[ 90%] Meshing surface 10 order 2\n",
       "[100%] Meshing surface 11 order 2\n",
       "Surface mesh: worst distortion = 0.372103 (0 elements in ]0, 0.2]); worst gamma = 0.469692\n",
-      "Done meshing order 2 (Wall 0.0185366s, CPU 0.003787s)\n",
+      "Done meshing order 2 (Wall 0.0050835s, CPU 0.00506s)\n",
       "1770 nodes 1011 elements\n",
       "Writing 'exercise1.msh'...\n",
       "Done writing 'exercise1.msh'\n"
@@ -271,7 +269,7 @@
     "X, ns.x = nutils.mesh.gmsh('exercise1.msh')\n",
     "ns.x *= ref_length\n",
     "\n",
-    "ns.define_for('x', gradient='grad', jacobians=('dV', 'dS'), normal='n')\n",
+    "ns.define_for('x', gradient='grad', jacobians=('dS', 'dL'), normal='n')\n",
     "\n",
     "ns.r = numpy.linalg.norm(ns.x)\n",
     "ns.phi = numpy.arctan2(ns.x[1] / ref_length, ns.x[0] / ref_length)\n",
@@ -399,7 +397,7 @@
     "ns.nu = ns.nu0 * numpy.choose(X.indicator('rotor'), [1, 1/5000])\n",
     "ns.I = I\n",
     "ns.J2 = (X.indicator('p') - X.indicator('n')) * ns.I * nturns \\\n",
-    "    / X['p'].integral('dV' @ ns, degree=1)\n",
+    "    / X['p'].integral('dS' @ ns, degree=1)\n",
     "\n",
     "plot_field('J2', 'A/mm2', cmap='bwr', clim='symmetric')\n",
     "plot_field('nu', 'm/H')"
@@ -422,7 +420,7 @@
     "\n",
     "Multiplying the differential equation with a test function $\\beta_2$, integrating over $X$ and applying integration by parts to the laplace term gives the weak formulation: Find $A_2$ such that for all $\\beta_2$\n",
     "\n",
-    "$$ R := \\int_X \\left( -\\nu \\nabla_i(\\beta_2) \\nabla_i(A_2) + \\beta_2 J_2 \\right)\\ \\mathrm dV = 0, $$\n",
+    "$$ R := \\int_X \\left( -\\nu \\nabla_i(\\beta_2) \\nabla_i(A_2) + \\beta_2 J_2 \\right)\\ \\mathrm dS = 0, $$\n",
     "\n",
     "subject to $A_2 = 0$ at $\\partial X$.\n",
     "\n",
@@ -460,9 +458,9 @@
     "ns.A2 = X.field('A2', btype='std', degree=2) * ref_flux_density * ref_length\n",
     "ns.beta2 = X.field('beta2', btype='std', degree=2) * ns.mu0 * ref_length / ref_flux_density\n",
     "\n",
-    "residual = X.integral('(-nu grad_i(beta2) grad_i(A2) + beta2 J2) dV' @ ns, degree=3) / ref_area\n",
+    "residual = X.integral('(-nu grad_i(beta2) grad_i(A2) + beta2 J2) dS' @ ns, degree=3) / ref_area\n",
     "\n",
-    "g = X.boundary.integral('A2^2 dS' @ ns, degree=5) / (ref_flux_density**2 * ref_length**3)\n",
+    "g = X.boundary.integral('A2^2 dL' @ ns, degree=5) / (ref_flux_density**2 * ref_length**3)\n",
     "constraints = System(g, 'A2').solve_constraints(droptol=1e-15)"
    ]
   },
@@ -630,7 +628,7 @@
     "\n",
     "where $c_p$ is the center of the positive side of the coil, $c_n$ is the center of the negative side of the coil and $l_\\text{stack}$ is the stack length. Out of convenience we approximate $\\left. A_2 \\right|_{x_p}$ with an average of $A_2$ over the entire positive side of the coil, $X_p$, and similarly for $\\left. A_2 \\right|_{x_n}$:\n",
     "\n",
-    "$$ \\Phi(S_\\text{coil}) \\approx l_\\text{stack} \\left( \\frac{\\int_{X_p} A_2 \\ \\mathrm dV}{\\int_{X_p} \\mathrm dV} - \\frac{\\int_{X_n} A_2 \\ \\mathrm dV}{\\int_{X_n} \\ \\mathrm dV} \\right). $$\n",
+    "$$ \\Phi(S_\\text{coil}) \\approx l_\\text{stack} \\left( \\frac{\\int_{X_p} A_2 \\ \\mathrm dS}{\\int_{X_p} \\mathrm dV} - \\frac{\\int_{X_n} A_2 \\ \\mathrm dV}{\\int_{X_n} \\ \\mathrm dS} \\right). $$\n",
     "\n",
     "**Exercise**: Define the flux through the coil in direction $x_1$ as `ns.flux` and print the flux using\n",
     "\n",
@@ -660,8 +658,8 @@
    "source": [
     "# Solution:\n",
     "ns.flux = ns.lstack * (\n",
-    "    X['p'].integral('A2 dV' @ ns, degree=3) / X['p'].integral('dV' @ ns, degree=3)\n",
-    "    - X['n'].integral('A2 dV' @ ns, degree=3) / X['n'].integral('dV' @ ns, degree=3)\n",
+    "    X['p'].integral('A2 dS' @ ns, degree=3) / X['p'].integral('dS' @ ns, degree=3)\n",
+    "    - X['n'].integral('A2 dS' @ ns, degree=3) / X['n'].integral('dS' @ ns, degree=3)\n",
     ")\n",
     "print_scalar('flux', 'mWb')"
    ]
@@ -675,7 +673,7 @@
     "\n",
     "The torque applied to the rotor can be computed via Arkkio's method by integrating the Maxwell stress tensor over an annulus enclosing the rotor:\n",
     "\n",
-    "$$ \\tau_\\text{rotor} = \\frac{l_\\text{stack}}{\\Delta r} \\int_{X_\\text{torque probe}} \\nu B_i e_{ri} B_j e_{\\phi j} r \\ \\mathrm dV, $$\n",
+    "$$ \\tau_\\text{rotor} = \\frac{l_\\text{stack}}{\\Delta r} \\int_{X_\\text{torque probe}} \\nu B_i e_{ri} B_j e_{\\phi j} r \\ \\mathrm dS, $$\n",
     "\n",
     "where $e_{ri}$ is the unit vector in direction $r$ and $e_{\\phi i}$ is the unit vector in direction $\\phi$.\n",
     "\n",
@@ -711,7 +709,7 @@
    ],
    "source": [
     "# Solution:\n",
-    "ns.torque = X['torque_probe'].integral('nu B_i er_i B_j ephi_j r dV' @ ns, degree=6) \\\n",
+    "ns.torque = X['torque_probe'].integral('nu B_i er_i B_j ephi_j r dS' @ ns, degree=6) \\\n",
     "    * stack_length / height_torque_probe\n",
     "print_scalar('torque', 'mN*m')"
    ]
@@ -772,7 +770,7 @@
       "minimize > iter 2 > scalar = 1.180e-03, norm([grad(scalar), residual]) = 1.112e-02\n",
       "minimize > iter 3 > scalar = 7.003e-07, norm([grad(scalar), residual]) = 2.664e-04\n",
       "minimize > iter 4 > scalar = 2.751e-13, norm([grad(scalar), residual]) = 1.669e-07\n",
-      "minimize > iter 5 > scalar = 4.320e-26, norm([grad(scalar), residual]) = 6.614e-14\n",
+      "minimize > iter 5 > scalar = 4.392e-26, norm([grad(scalar), residual]) = 6.669e-14\n",
       "I: 12.570A\n"
      ]
     }
