--- a/exercise1-with-solutions.ipynb
+++ b/exercise1-with-solutions.ipynb
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "domain_radius = Length('10cm')\n",
-    "stack_length = Length('10cm')\n",
+    "lstack = Length('10cm') # stack length\n",
     "nturns = 100\n",
     "I = nutils.function.field('I') * ElectricCurrent('A')\n",
     "args = dict(I=10.)"
@@ -161,7 +161,7 @@
       "[ 60%] Meshing curve 5 (Ellipse)\n",
       "[ 80%] Meshing curve 6 (Ellipse)\n",
       "[ 90%] Meshing curve 7 (Ellipse)\n",
-      "Done meshing 1D (Wall 0.00827385s, CPU 0.008171s)\n",
+      "Done meshing 1D (Wall 0.00877805s, CPU 0.008771s)\n",
       "Meshing 2D...\n",
       "[  0%] Meshing surface 2 (Plane, Frontal-Delaunay)\n",
       "[ 20%] Meshing surface 3 (Plane, Frontal-Delaunay)\n",
@@ -170,7 +170,7 @@
       "[ 60%] Meshing surface 9 (Plane, Frontal-Delaunay)\n",
       "[ 80%] Meshing surface 10 (Plane, Frontal-Delaunay)\n",
       "[ 90%] Meshing surface 11 (Plane, Frontal-Delaunay)\n",
-      "Done meshing 2D (Wall 0.0210369s, CPU 0.020977s)\n",
+      "Done meshing 2D (Wall 0.0212822s, CPU 0.021151s)\n",
       "Meshing order 2 (curvilinear on)...\n",
       "[  0%] Meshing curve 1 order 2\n",
       "[ 10%] Meshing curve 2 order 2\n",
@@ -187,7 +187,7 @@
       "[ 90%] Meshing surface 10 order 2\n",
       "[100%] Meshing surface 11 order 2\n",
       "Surface mesh: worst distortion = 0.372103 (0 elements in ]0, 0.2]); worst gamma = 0.469692\n",
-      "Done meshing order 2 (Wall 0.0050835s, CPU 0.00506s)\n",
+      "Done meshing order 2 (Wall 0.00525148s, CPU 0.004345s)\n",
       "1770 nodes 1011 elements\n",
       "Writing 'exercise1.msh'...\n",
       "Done writing 'exercise1.msh'\n"
@@ -277,7 +277,7 @@
     "ns.er = nutils.function.normalized('grad_i(r)' @ ns)\n",
     "ns.ephi = nutils.function.normalized('grad_i(phi)' @ ns)\n",
     "\n",
-    "ns.lstack = stack_length"
+    "ns.lstack = lstack"
    ]
   },
   {
@@ -636,7 +636,7 @@
     "print_scalar('flux', 'mWb')\n",
     "```\n",
     "\n",
-    "The function `print_scalar` is alread defined above. The stack length $l_\\text{stack}$ is available as `stack_length` and `ns.lstack`.\n",
+    "The function `print_scalar` is alread defined above. The stack length $l_\\text{stack}$ is available as `lstack`.\n",
     "\n",
     "[Stokes' theorem]: https://en.wikipedia.org/wiki/Stokes%27_theorem"
    ]
@@ -710,7 +710,7 @@
    "source": [
     "# Solution:\n",
     "ns.torque = X['torque_probe'].integral('nu B_i er_i B_j ephi_j r dS' @ ns, degree=6) \\\n",
-    "    * stack_length / height_torque_probe\n",
+    "    * lstack / height_torque_probe\n",
     "print_scalar('torque', 'mN*m')"
    ]
   },
@@ -770,7 +770,7 @@
       "minimize > iter 2 > scalar = 1.180e-03, norm([grad(scalar), residual]) = 1.112e-02\n",
       "minimize > iter 3 > scalar = 7.003e-07, norm([grad(scalar), residual]) = 2.664e-04\n",
       "minimize > iter 4 > scalar = 2.751e-13, norm([grad(scalar), residual]) = 1.669e-07\n",
-      "minimize > iter 5 > scalar = 4.392e-26, norm([grad(scalar), residual]) = 6.669e-14\n",
+      "minimize > iter 5 > scalar = 4.294e-26, norm([grad(scalar), residual]) = 6.594e-14\n",
       "I: 12.570A\n"
      ]
     }
