Some textual adjustment in the example 1

--- a/exercise1-with-solutions.ipynb
+++ b/exercise1-with-solutions.ipynb
@@ -702,7 +702,9 @@
     "\n",
     "**Exercise**: Define the $B$-field as `ns.B` by filling in the dots below and run the cell to plot the $B$-field in direction $x_0$ and $x_1$.\n",
     "\n",
-    "**Bonus**: Also plot the radial and angular components of $B$."
+    "**Bonus**: Also plot the radial and angular components of $B$.\n",
+    "\n",
+    "Consider that the radial and angular components can be computed using the unit vectors from cylindrical coordinates as $B_i e_{ri}$, and $B_j e_{\\phi j}$, respectively."
    ]
   },
   {
@@ -949,14 +951,6 @@
     ")\n",
     "print_scalar('I', 'A')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb509b5a-dac9-4cea-8864-f28bfd1b8745",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
