--- a/exercise2.ipynb
+++ b/exercise2.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Exercise 2: Variable flux reluctance machine\n",
     "\n",
-    "Having discussed the implementation details of a model of a simplified reluctance machine in exercise 1, we continue with a realistic variable flux reluctance machine. The realistic machine consists of a stator with twelve teeth and coils, grouped in three phases, and a rotor with ten teeth.\n",
+    "Having discussed the implementation details of a model of a simplified reluctance machine in exercise 1, we continue with a more realistic variable flux reluctance machine. The realistic machine consists of a stator with twelve teeth and coils, grouped in three phases, and a rotor with ten teeth.\n",
     "\n",
     "![domain](exercise2.svg)\n",
     "\n",
-    "Contrary to the model of exercise 1, the model used here has a rotating rotor and the magnetic field will be solved in space and mechanical angle (or equivalently time assuming the angular velocity is constant) simultaneously. Because of the complexity of the geometry, the rotation of the rotor and solving for a range of mechanical angles simultaneously, the model is not included in this notebook, but in file [vfrm.py](vfrm.py). From this file we import class `Machine`, which"
+    "Contrary to the model of exercise 1, the model used here has a rotating rotor and the magnetic field will be solved in space and mechanical angle (or equivalently time assuming the angular velocity is constant) simultaneously. Because of the complexity of the geometry, the rotation of the rotor and solving for a range of mechanical angles simultaneously, the model is not included in this notebook, but in file [vfrm.py](vfrm.py). From this file we import class `Machine`, which will be used in this exercice."
    ]
   },
   {
